# bol-scraper-rs

./: Cargo.toml
src/: curlrs.rs  main - reqwest.rs  main.rs  reqwestrs.rs  ureqrs.rs
