[package]
name = "bol-scraper-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
ureq = { version = "2.8.0", features = ["json"] }
